feat: add game model and shuffle function. add newGame and pickCard functions.

--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -30,6 +30,11 @@
   transform: scale(1.2) translateX(150px) translateY(-300px) rotate(10deg);
 }
 
+.played-card {
+  right: 25px;
+  transform: scale(1.2) translateX(150px) translateY(-300px) rotate(10deg);
+}
+
 @keyframes pick-card-animation {
   0% {
     transform: scale(1);
