--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -35,6 +35,17 @@
   transform: scale(1.2) translateX(150px) translateY(-300px) rotate(10deg);
 }
 
+.player-position {
+  position: absolute;
+  right: 0;
+}
+
+.add-btn {
+  position: absolute;
+  right: 32px;
+  bottom: 32px;
+}
+
 @keyframes pick-card-animation {
   0% {
     transform: scale(1);
