--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   align-items: center;
   font-size: 18px;
-  background-color: #ffd842;
+  background-color: rgba(152, 152, 152, 0.8);
  
   border-top-left-radius: 50px;
   border-bottom-left-radius: 50px;
@@ -14,9 +14,13 @@
   }
 
   img {
-    width: 100px;
-    height: 100px;
+    width: 60px;
+    height: 60px;
     object-fit: cover;
     border-radius: 50%;
   }
+}
+
+.player-active {
+  background-color: #ffd842;
 }
