--- a/src/app/add-player-dialog/add-player-dialog.component.html
+++ b/src/app/add-player-dialog/add-player-dialog.component.html
@@ -9,6 +9,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Ok</button>
+  <button mat-button (click)="onNoClick()">Cancel</button>
+  <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Save</button>
 </mat-dialog-actions>
