--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -46,6 +46,13 @@
   bottom: 32px;
 }
 
+.info-card {
+  position: absolute;
+  left: 32px;
+  right: 120px;
+  bottom: 32px;
+}
+
 @keyframes pick-card-animation {
   0% {
     transform: scale(1);
