--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -2,10 +2,10 @@
 
 <mat-card>
     <mat-card-header>
-    <mat-card-title>{{ title }}</mat-card-title>
+    <mat-card-title>{{ card ? title : "Pick a card" }}</mat-card-title>
   </mat-card-header>
   
   <mat-card-content>
-    {{ description }}
+    {{ card ? description : "Click on the card stack to start the game." }}
   </mat-card-content>
 </mat-card>
