--- a/src/app/add-player-dialog/add-player-dialog.component.html
+++ b/src/app/add-player-dialog/add-player-dialog.component.html
@@ -10,5 +10,5 @@
 
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [mat-dialog-close]="name" cdkFocusInitial>Save</button>
+  <button mat-button [disabled]="name.length === 0" [mat-dialog-close]="name">Save</button>
 </mat-dialog-actions>
