feat: add tooltip to add player button

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -18,7 +18,7 @@
 
 <app-game-info [card]="currentCard" class="info-card"></app-game-info>
 
-<button mat-fab aria-label="button with an add icon" class="add-btn" (click)="openDialog()">
+<button mat-fab aria-label="button with an add icon" class="add-btn" (click)="openDialog()" matTooltip="Add a new player">
   <mat-icon>add</mat-icon>
 </button>
 
