feat: update instructions in game-info component

--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -2,10 +2,10 @@
 
 <mat-card>
     <mat-card-header>
-    <mat-card-title>{{ card ? title : "Pick a card" }}</mat-card-title>
+    <mat-card-title>{{ card ? title : "How to start" }}</mat-card-title>
   </mat-card-header>
   
   <mat-card-content>
-    {{ card ? description : "Click on the card stack to start the game." }}
+    {{ card ? description : "Add players by clicking on the plus button and start the game by clicking on the card stack. Have fun!" }}
   </mat-card-content>
 </mat-card>
