fix: resolve path issues for built

--- a/src/app/startscreen/startscreen.component.html
+++ b/src/app/startscreen/startscreen.component.html
@@ -1,4 +1,4 @@
-<div class="start-screen">
+<div class="start-screen" [style.background-image]="'url(' + imagePath + ')'">
   <h1>RING OF FIRE</h1>
   <button (click)="newGame()" class="start-btn">Start Game</button>  
 </div>
