--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,6 +1,6 @@
 <app-player *ngFor="let player of game.players; let i = index" class="player-position" [ngStyle]="{'top.px': 100 + (i * 100)}" [name]="player" [playerActive]="i === game.currentPlayer"></app-player>
 
-<div class="field">
+<div class="field" [style.background-image]="'url(' + imagePath + ')'">
  <div class="card-stack">
     <!-- Unplayed cards stack -->
     <img *ngFor="let card of [0, 1, 2, 3]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="assets/img/cards/card_cover.png">
