--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,25 +1,54 @@
-<app-player *ngFor="let player of game.players; let i = index" class="player-position" [ngStyle]="{'top.px': 100 + (i * 100)}" [name]="player" [playerActive]="i === game.currentPlayer"></app-player>
+<app-player
+  *ngFor="let player of game.players; let i = index"
+  class="player-position"
+  [ngStyle]="{ 'top.px': 100 + i * 100 }"
+  [name]="player"
+  [playerActive]="i === game.currentPlayer"
+></app-player>
 
 <div class="field" [style.background-image]="'url(' + imagePath + ')'">
- <div class="card-stack">
+  <div class="card-stack">
     <!-- Unplayed cards stack -->
-    <img *ngFor="let card of [0, 1, 2, 3]; let i = index;" [ngStyle]="{'right.px': i * 5}" src="assets/img/cards/card_cover.png">
+    <img
+      *ngFor="let card of [0, 1, 2, 3]; let i = index"
+      [ngStyle]="{ 'right.px': i * 5 }"
+      src="assets/img/cards/card_cover.png"
+    />
 
     <!-- Top card -->
-    <img (click)="pickCard()" class="top-card" [ngStyle]="{'right.px': 25}" src="assets/img/cards/card_cover.png">
+    <img
+      (click)="pickCard()"
+      class="top-card"
+      [ngStyle]="{ 'right.px': 25 }"
+      src="assets/img/cards/card_cover.png"
+    />
 
     <!-- Played cards stack -->
-     <img class="played-card" *ngFor="let card of game.playedCards" src="assets/img/cards/{{ card }}.png">
+    <img
+      class="played-card"
+      *ngFor="let card of game.playedCards"
+      src="assets/img/cards/{{ card }}.png"
+    />
 
-     <!-- Picked card (animation) -->
-    <img (click)="pickCard()" *ngIf="pickCardAnimation" class="pick-card" [ngStyle]="{'right.px': 5 * 5}" src="assets/img/cards/{{ currentCard }}.png">
- </div>
+    <!-- Picked card (animation) -->
+    <img
+      (click)="pickCard()"
+      *ngIf="game.pickCardAnimation"
+      class="pick-card"
+      [ngStyle]="{ 'right.px': 5 * 5 }"
+      src="assets/img/cards/{{ game.currentCard }}.png"
+    />
+  </div>
 </div>
 
-<app-game-info [card]="currentCard" class="info-card"></app-game-info>
+<app-game-info [card]="game.currentCard" class="info-card"></app-game-info>
 
-<button mat-fab aria-label="button with an add icon" class="add-btn" (click)="openDialog()" matTooltip="Add a new player">
+<button
+  mat-fab
+  aria-label="button with an add icon"
+  class="add-btn"
+  (click)="openDialog()"
+  matTooltip="Add a new player"
+>
   <mat-icon>add</mat-icon>
 </button>
-
-
