--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -7,7 +7,7 @@
   align-items: center;
 }
 
-.card-stack{
+.card-stack {
   position: relative;
   img {
     position: absolute;
@@ -37,6 +37,7 @@
 .player-position {
   position: absolute;
   right: 0;
+  z-index: 1;
 }
 
 .add-btn {
@@ -55,7 +56,7 @@
 @keyframes pick-card-animation {
   0% {
     transform: scale(1);
-  } 
+  }
   30% {
     transform: scale(1.4);
   }
@@ -65,5 +66,4 @@
   100% {
     transform: scale(1.2) translateX(150px) translateY(-300px) rotate(10deg);
   }
-
 }
