feat: edit player name

--- a/src/app/add-player-dialog/add-player-dialog.component.html
+++ b/src/app/add-player-dialog/add-player-dialog.component.html
@@ -4,11 +4,13 @@
   <p>Please enter the player name:</p>
   <mat-form-field>
     <mat-label>Name</mat-label>
-    <input matInput [(ngModel)]="name" />
+    <input matInput [(ngModel)]="name" maxlength="20" />
   </mat-form-field>
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <button mat-button (click)="onNoClick()">Cancel</button>
-  <button mat-button [disabled]="name.length === 0" [mat-dialog-close]="name">Save</button>
+  <button mat-button [disabled]="name.length === 0" [mat-dialog-close]="name">
+    Save
+  </button>
 </mat-dialog-actions>
